packages/legend-studio/style/components/_review.scss
/**
 * Copyright (c) 2020-present, Goldman Sachs
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@use '../mixins' as *;

.review {
  height: 100%;
  display: flex;
  flex-direction: column;

  &__activity-bar__review-icon svg {
    font-size: 2.8rem;
  }

  &__content-container {
    @include flexHCenter;

    background: var(--color-dark-grey-80);
    flex: 1 0 auto;
  }

  &__content {
    position: relative;
    width: 100%;
    max-width: 1900px;
    border-left: 0.1rem solid var(--color-black);
    border-right: 0.1rem solid var(--color-black);

    @media (max-width: 1900px) {
      border-left: none;
      border-right: none;
    }
  }

  &__content--expanded {
    max-width: initial;
    border-left: none;
    border-right: none;
  }

  &__body {
    display: flex;
    height: calc(100% - 2.2rem);
  }
}

.review-panel {
  .panel {
    &__header {
      background: var(--color-dark-grey-100);
      z-index: 1;
    }

    &__content {
      overflow-y: hidden;
      background: var(--color-dark-grey-50);
    }
  }

  &__header {
    height: 3.4rem;
    min-height: 3.4rem;
    padding-left: 0;
  }

  &__header__tabs {
    display: flex;
    height: 100%;
    overflow-x: overlay;
  }

  &__header__tab {
    @include flexVCenter;

    padding: 0 1rem;
    cursor: pointer;
    color: var(--color-light-grey-400);
    background: var(--color-dark-grey-80);
    border-right: 0.1rem solid var(--color-dark-grey-80);
  }

  &__header__tab--active {
    color: var(--color-light-grey-100);
    background: var(--color-dark-grey-50);
  }

  &__header__tab__content {
    @include flexVCenter;

    height: 100%;
    width: 100%;
  }

  &__header__tab__context-menu {
    background: var(--color-dark-grey-100);
    border: 0.1rem solid var(--color-dark-grey-50);
    padding: 0.5rem 0;
  }

  &__header__tab__context-menu__item {
    @include flexVCenter;

    width: 100%;
    cursor: default;
    color: var(--color-light-grey-400);
    height: 2.8rem;
    padding: 0 1rem;
  }

  &__header__tab__context-menu__item[disabled] {
    color: var(--color-dark-grey-400);
  }

  &__header__tab__context-menu__item:not([disabled]):hover {
    background: var(--color-light-blue-450);
  }

  &__header__tab__element__type {
    font-weight: bold;
  }

  &__header__tab__element__name {
    color: inherit;
    padding: 0 0.5rem;
  }

  &__header__tab__close-btn {
    visibility: hidden;

    @include flexVCenter;

    svg {
      color: var(--color-light-grey-200);
      font-size: 1.2rem;
    }
  }

  &__header__tab--active svg {
    color: var(--color-light-grey-100);
  }

  &__header__tab--active &__header__tab__close-btn,
  &__header__tab:hover &__header__tab__close-btn {
    visibility: visible;
  }

  &__content {
    background: var(--color-light-grey-200);
    position: relative;
    height: calc(100% - 3.4rem);
  }

  &__header__actions {
    display: flex;
    height: 100%;
  }

  &__element-view {
    display: flex;

    &__type {
      @include flexCenter;

      width: 13rem;
      background: var(--color-dark-grey-100);
      border-right: 0.1rem solid var(--color-dark-grey-50);
      border-left: 0.1rem solid var(--color-dark-grey-50);
      color: var(--color-light-grey-300);
      cursor: pointer;
    }

    &__type:hover {
      background: var(--color-dark-grey-200);
    }

    &__type__label {
      @include flexVCenter;

      height: 3.4rem;
      padding: 0 0.5rem;
      border-top: 0.3rem solid var(--color-yellow-200);
    }

    &__options {
      width: 13rem;
      background: var(--color-dark-grey-100);
      border: 0.1rem solid var(--color-dark-grey-50);
    }

    &__option {
      @include flexCenter;

      width: 100%;
      cursor: default;
      color: var(--color-light-grey-400);
      height: 2rem;
    }

    &__option:hover {
      background: var(--color-light-blue-450);
    }
  }

  &__splash-screen {
    @include flexCenter;

    height: 100%;
    width: 100%;
    flex-direction: column;
    user-select: none;
    background: var(--color-dark-grey-50);

    &__content--hidden {
      display: none;
    }
  }
}

.review__status-bar {
  @include flexVCenter;
  @include flexHSpaceBetween;

  height: 2.2rem;
  color: var(--color-light-grey-0);
  padding: 0 0.5rem 0 1rem;
  z-index: 2;
  background: var(--color-purple-200);

  &__right,
  &__left {
    height: 100%;

    @include flexVCenter;
  }

  &__workspace {
    @include flexVCenter;

    cursor: default;
    height: 100%;
  }

  &__workspace__status {
    @include flexCenter;

    height: 1.6rem;
    cursor: pointer;
    font-size: 1rem;
    background: var(--color-dark-shade-300);
    color: var(--color-light-grey-0);
    border-radius: 0.3rem;
    padding: 0 0.5rem;
    margin: 0 0.5rem;
    font-weight: 500;
  }

  &__workspace__icon {
    @include flexVCenter;
  }

  &__workspace__project,
  &__workspace__workspace {
    padding: 0 0.5rem;
    cursor: default;
  }

  &__workspace__project a,
  &__workspace__workspace a {
    text-decoration: none;
    color: var(--color-light-grey-0);
  }

  &__review {
    @include flexVCenter;

    padding: 0 0.5rem;
    height: 100%;
  }

  &__review a {
    @include flexVCenter;

    height: 1.4rem;
    background: var(--color-light-grey-50);
    border-radius: 0.2rem;
    padding: 0 0.5rem;
    color: var(--color-dark-grey-400);
    font-size: 1.1rem;
    font-weight: 500;
    text-decoration: none;
  }

  &__status {
    margin-right: 1.5rem;
  }

  &__user {
    @include flexCenter;

    margin-right: 1rem;
    cursor: default;
  }

  &__user__icon {
    margin-right: 0.5rem;
  }

  &__action {
    @include flexCenter;

    cursor: pointer;
    background: none;
    height: 100%;
    width: 3rem;
  }

  &__action:hover {
    background: var(--color-light-shade-50);
  }

  &__action__toggler,
  &__action__toggler svg {
    color: var(--color-dark-shade-300);
  }

  &__action__toggler--active,
  &__action__toggler--active svg {
    color: var(--color-light-grey-0);
  }
}

.review__side-bar {
  &__header__title {
    width: calc(100% - 3.4rem);
  }

  &__merge-btn {
    margin-left: 0.5rem;

    svg {
      font-size: 1.7rem;
    }
  }

  &__review__info {
    padding: 0.5rem;
    display: flex;

    &__content {
      display: flex;
      width: calc(100% - 6.6rem);
      margin-right: 0.5rem;

      &--closed {
        width: calc(100% - 3.3rem);
      }

      &--committed {
        width: 100%;
      }

      &__title {
        @include flexVCenter;

        padding: 0.5rem;
        height: 2.8rem;
        width: 100%;
        background: var(--color-dark-grey-250);
        border: 0.1rem solid var(--color-dark-grey-250);
        cursor: default;

        &__review-name {
          @include ellipsisTextOverflow;
        }
      }

      &__status {
        @include ellipsisTextOverflow;

        margin: 0 0.5rem 0.6rem 0.5rem;
        cursor: default;
        user-select: none;
        color: var(--color-dark-grey-400);
        font-size: 1.1rem;
        min-height: 1.1rem;
      }
    }
  }
}

